--- a/views/forget_password.ejs
+++ b/views/forget_password.ejs
@@ -1,24 +1,84 @@
-<link rel="stylesheet" href="/css/sign.css">
-<div class="mainContainer ">
-    <div class="companyLogo">
-        <h1>Company's Logo</h1>
+<div
+  class="w-full max-w-sm p-6 m-auto mx-auto bg-gray-800 rounded-lg shadow-md mt-8"
+  style="margin-top: 150px !important"
+>
+  <div class="flex justify-center mx-auto">
+    <img
+      class="w-auto h-7 sm:h-8"
+      src="https://merakiui.com/images/logo.svg"
+      alt=""
+    />
+  </div>
+  <h3
+    class="mt-3 text-xl font-medium text-center text-gray-600 dark:text-gray-200"
+  >
+    Welcome Back
+  </h3>
+
+  <p class="mt-1 text-center text-gray-500 dark:text-gray-400">
+    Reset your password Here
+  </p>
+
+  <form class="mt-6" method="POST" action="/users/forgetPasswordLink">
+    <div class="mt-2">
+      <label for="email" class="block text-sm text-gray-800 dark:text-gray-200"
+        >Email</label
+      >
+      <input
+        type="email"
+        name="email"
+        required
+        class="block w-full px-4 py-2 mt-2 border rounded-lg bg-gray-800 text-gray-300 border-gray-600 focus:border-blue-300 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+      />
+    </div>
+    <div class="mt-2">
+      <div class="flex items-center justify-between">
+        <label
+          for="password"
+          class="block text-sm text-gray-800 dark:text-gray-200"
+          >Password</label
+        >
+      </div>
+
+      <input
+        type="password"
+        name="password"
+        required
+        class="block w-full px-4 py-2 mt-2 border rounded-lg bg-gray-800 text-gray-300 border-gray-600 focus:border-blue-300 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+      />
     </div>
 
-    <div class="formInput">
-        <h1> Welcome </h1>
-        <form method="POST" action="/users/forgetPasswordLink" >
-            <input type="email" name="email" placeholder="Enter email" required><br>
-            <input type="password" name="password" placeholder="Enter password" required><br>
-            <input type="password" name="confirmPassword" placeholder="Confirm Password" required><br>
-            
-            <div class= 'buttons'>
-                <div style="margin-left: 60px;" class = 'submitButtons'><button type="submit">Reset</button></div>
-                
-            </div>
+    <div class="mt-2">
+      <div class="flex items-center justify-between">
+        <label
+          for="confirmPassword"
+          class="block text-sm text-gray-800 dark:text-gray-200"
+          >Confirm Password</label
+        >
+      </div>
 
-            <div class="extraStuff">
-                <small> Don't have account ?</small>
-                <a href="/users/sign-up"> Register User</a>
-            </div>
+      <input
+        type="password"
+        name="confirmPassword"
+        required
+        class="block w-full px-4 py-2 mt-2 border rounded-lg bg-gray-800 text-gray-300 border-gray-600 focus:border-blue-300 focus:ring-blue-300 focus:outline-none focus:ring focus:ring-opacity-40"
+      />
     </div>
-</div> 
+    <div class="mt-6">
+      <button
+        class="w-full px-6 py-2.5 text-sm font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-gray-800 rounded-lg hover:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:ring-opacity-50"
+      >
+        Sign In
+      </button>
+    </div>
+  </form>
+
+  <p class="mt-8 text-xs font-light text-center text-gray-400">
+    Don't have an account?
+    <a
+      href="/users/sign-up"
+      class="font-medium text-gray-700 dark:text-gray-200 hover:underline"
+      >Sign up</a
+    >
+  </p>
+</div>
